<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
android:gravity="center">
<androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardCornerRadius="10dp"
>
<LinearLayout
               android:layout_width="300dp"
              android:layout_height="wrap_content"
              android:background="#FFFFFF"
              android:orientation="vertical"
              android:padding="20dp">
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText" android:layout_marginTop="10dp" android:hint="@string/enter_book"
            android:textColor="@color/colorItem" android:textColorHint="@color/colorItem"
            android:fontFamily="@font/roboto_medium" />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
            android:text="@string/book_error_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/nameErrorMessage" android:textSize="12sp"
            android:textColor="@color/colorButtonPink" tools:visibility="invisible"
            android:fontFamily="@font/roboto_medium"/>
    <TextView
            android:text="@string/select_due_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView6" android:fontFamily="@font/roboto_medium"
            android:textSize="12sp" android:textColor="@color/colorMainBackground" android:layout_marginStart="5dp"/>
    <com.vivekkaushik.datepicker.DatePickerTimeline
            android:id="@+id/datePickerTimeline"
            android:layout_width="242dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:text="@string/date_error_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dateErrorMessage"
            android:textSize="12sp"
            android:textColor="@color/colorButtonPink" tools:visibility="invisible"
            android:fontFamily="@font/roboto_medium"/>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:paddingTop="7dp"
                  android:paddingBottom="7dp"
                  android:clipToPadding="false"
                  android:orientation="horizontal" android:layout_marginTop="5dp">
        <Button
                android:id="@+id/dismiss"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/cancel" android:layout_weight="0.5"
                android:background="@drawable/button_round_red"
                android:textColor="@color/white" android:fontFamily="@font/roboto_medium"/>
        <Button
                android:id="@+id/add"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/save" android:layout_weight="0.5"
                android:background="@drawable/button_round_blue"
                android:textColor="@color/white"
                android:layout_marginStart="10dp" android:fontFamily="@font/roboto_medium"/>
    </LinearLayout>


</LinearLayout>
</androidx.cardview.widget.CardView>
</LinearLayout>