<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/mainLinearLayout"
        tools:context=".MainActivity" android:background="@color/colorMainBackground">

    <TextView
            android:text="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:textSize="25sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_medium" android:layout_marginStart="10dp" android:visibility="visible"/>
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="126dp"
            app:srcCompat="@drawable/ic_main_man"
            android:id="@+id/imageView"
            android:layout_marginTop="10dp" android:contentDescription="@string/book_man"/>
    <Button
            android:text="@string/add_book"
            android:layout_width="134dp"
            android:layout_height="31dp"
            android:layout_gravity="center"
            android:id="@+id/button"
            android:background="@drawable/button_round_red"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/ic_add"
            android:drawablePadding="-10dp"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_medium"/>

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">
        <LinearLayout
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:gravity="center"
                android:id="@+id/no_book_layout"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical" android:layout_marginTop="10dp">


            <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp" app:srcCompat="@drawable/ic_arrow"
                    android:id="@+id/imageView2"/>
            <TextView
                    android:text="@string/no_books"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView4" android:textColor="@color/white"
                    android:fontFamily="@font/roboto_medium" android:textSize="20sp" android:layout_marginTop="40dp"/>
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical" android:layout_marginTop="15dp"/>

    </FrameLayout>


</LinearLayout>